--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body {
   padding: 15px;
   font-family: "Lato", sans-serif;
 }
+
 nav {
+  width: 100%;
+  height: 60px;
+  background-color: red;
   display: flex;
   margin-bottom: 15px;
 }
@@ -15,10 +19,11 @@ nav > ul {
   display: flex;
 }
 nav > ul > li {
+  font-size: 20px;
+  margin-left: 155px;
   list-style: none;
 }
 nav > ul > li > a {
-  margin-right: 35px;
   text-decoration: none;
 }
 
@@ -31,15 +36,18 @@ header {
 }
 header h1 {
   font-weight: 700;
+  font-size: 56px;
   margin-bottom: 15px;
 }
 header p {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  font-size: 26px;
 }
 header a {
   padding: 5px;
   color: white;
   border-radius: 41px;
+  font-size: 25px;
   background-color: #893fff;
   text-decoration: none;
   transition: 0.5s;
@@ -57,13 +65,14 @@ header i {
   width: 50%;
 }
 .header-image {
+  margin-left: 100px;
   background-image: url(../images/circle-design.svg);
   background-repeat: no-repeat;
   background-position: relative;
-  background-size: 350px 350px;
+  background-size: 450px 450px;
 }
 .header-image img {
-  width: 80%;
+  width: 100%;
   transition: 0.5s;
   margin-bottom: 100px;
 }
@@ -83,8 +92,85 @@ section h2 {
   margin-bottom: 35px;
 }
 .collections {
+  align-item: center;
+  justify-content: center;
+  margin-left: 45px;
+  margin-right: 45px;
   display: flex;
+  flex-wrap: wrap;
+}
+.collection-card {
+  height: 476px;
+  width: 329px;
+  margin: 15px;
+  padding: 14px;
+  border-radius: 8px;
+  box-shadow: 5px 5px 11px #b3b3b3, -5px -5px 11px #ffffff;
+  transition: 0.6s;
+
+}
+.collection-card:hover {
+background-color:#C9E9FF;
+}
+.collection-card img {
+  width: 100%;
+}
+.collection-card h3 {
+  padding-top: 16px;
+  font-size: 28px;
+  margin-top: 6px;
+}
+.collection-card h4 {
+  padding-top: 10px;
+  font-size: 24px;
+  margin-top: 6px;
+}
+.collection-card p {
+  font-size: 16px;
+  font-weight: bold;
+  color: #787885;
+}
+.star i {
+  padding-top: 16px;
+  font-size: 16px;
+  color: #fb8200;
+}
+span {
+  margin-top: 55px;
+
+  float: right;
+  margin-right: 25px;
+}
+span a {
+  font-size: 20px;
+  text-decoration: none;
+  color: #893fff;
+}
+span i {
+  margin-left: 10px;
 }
 /*---------------------------------------
-     Popular Collection section Start 
+     Popular Collection section End 
  ----------------------------------------*/
+
+/*---------------------------------------
+    Footer section Start 
+ ----------------------------------------*/
+
+footer {
+  margin: auto;
+  margin-top: 100px;
+  padding: 30px;
+  color: #fff;
+  background-color: #0a0826;
+  text-align: center;
+}
+.footer-content p {
+  margin-top: 10px;
+  font-size: 18px;
+}
+.social-icons i {
+  margin-top: 10px;
+  margin-left: 20px;
+  font-size: 25px;
+}
