--- a/style.css
+++ b/style.css
@@ -7,24 +7,42 @@ body {
   padding: 15px;
   font-family: "Lato", sans-serif;
 }
-
+/*---------------------------------------
+                  Navbar
+ ----------------------------------------*/
 nav {
+  display: flex;
+  background-color: lightblue;
+  height: 80px;
   width: 100%;
-  height: 60px;
-  background-color: red;
-  display: flex;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
-nav > ul {
-  display: flex;
+nav h2 {
+  display: block;
+  font-size: 26px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
-nav > ul > li {
-  font-size: 20px;
-  margin-left: 155px;
-  list-style: none;
+nav ul {
+  width: 80%;
+  margin-left: 255px;
+  float: left;
 }
-nav > ul > li > a {
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+}
+nav ul li a {
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
   text-decoration: none;
+  margin-right: 70px;
+}
+ul .fas {
+  font-size: 22px;
+  margin-right: 35px;
 }
 
 /*---------------------------------------
@@ -107,10 +125,9 @@ section h2 {
   border-radius: 8px;
   box-shadow: 5px 5px 11px #b3b3b3, -5px -5px 11px #ffffff;
   transition: 0.6s;
-
 }
 .collection-card:hover {
-background-color:#C9E9FF;
+  background-color: #c9e9ff;
 }
 .collection-card img {
   width: 100%;
@@ -173,4 +190,17 @@ footer {
   margin-top: 10px;
   margin-left: 20px;
   font-size: 25px;
+}
+
+.our-app {
+  display: flex;
+  margin-top: 100px;
+}
+
+.app-image {
+  width: 50%;
+}
+
+.app-info {
+  margin-top: 200px;
 }
